[package]
name = "tasklens"
version = "0.1.0"
authors = ["Matthew Miller <mattdm@mattdm.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-logger = "0.5.0"
manganis = "0.2.2"
tracing = "0.1.40"
convert_case = "0.6.0"
comrak = { version = "0.29.0", default-features = false, features = [
    "syntect",
] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
diesel = { version = "2.2.4", features = ["extras"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
