[package]
name = "tasklens"
version = "0.1.0"
authors = ["Matthew Miller <mattdm@mattdm.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = '0.6.0-alpha.4', features = ["fullstack", "router"] }
dioxus-logger = "0.5.0"
# manganis = { version = '0.6.0-alpha.3' }
serde = { version = "1.0.197", features = ["derive"] }
convert_case = "0.6.0"
comrak = { version = "0.29.0", default-features = false, features = [
    "syntect",
] }
tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.18"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
